package pt.ipp.isep.dei.esoft.project.domain;

public enum Roles {
    //l
    ADIMIN,AGENT,CLIENT,STOREMANAGER,OWNER,STORENETWORKMANAGER
}
