@startuml
skinparam monochrome false
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
skinparam linetype orto

skinparam classAttributeIconSize "2"
'left to right direction


class Repositories {
  - Repositories():
  ~ propertyRepository: PropertyRepository
  ~ authenticationRepository: AuthenticationRepository
  ~ clientRepository: ClientRepository
  - instance: Repositories
  ~ announcementRepository: AnnouncementRepository
   announcementRepository: AnnouncementRepository
   OrderRepository: OrderRepository
   instance: Repositories
   clientRepository: ClientRepository
   authenticationRepository: AuthenticationRepository
}


class User {
  + User(String, String, int, String, String, String, String, Roles):
  - phone: String
  - name: String
  - email: String
  - address: String
  - taxNumber: int
  - descptions: String
  - roles: Roles
  - password: String
  + toString(): String
   name: String
   password: String
   descptions: String
   email: String
   phone: String
   address: String
   roles: Roles
   taxNumber: int
}
enum Roles << enumeration >> {
  + Roles():
  + values(): Roles[]
  + valueOf(String): Roles
}

class CreateOrderUI {
  + CreateOrderUI():
  - displayAndSelectAnnouncement(): AnnouncementDTO?
  + run(): void
  - submitData(): void
  - displayAnnouncementOptions(List<AnnouncementDTO>): void
}
class CreateOrderController {
  + CreateOrderController():
  + addOrderToTest(AnnouncementDTO, int, ClientDTO): boolean
  + addOrder(AnnouncementDTO, int): boolean
  - getClientByUserEmail(String): ClientDTO
   orderRepository: OrderRepository
   clientRepository: ClientRepository
   authenticationRepository: AuthenticationRepository
   announcementRepository: AnnouncementRepository
   announcements: List<AnnouncementDTO>
}
class OrderRepository {
  + OrderRepository():
  + createOrder(AnnouncementDTO, int, ClientDTO): Optional<OrderDTO>
  - addOrder(order): void
  - PutPerorder(): void
  - findOrder(OrderDTO): order?
  + rejectOrder(OrderDTO, MessagesOfClientRepository): void
  + acceptOrder(OrderDTO, MessagesOfClientRepository): void
  + OrderOfTheAgent(AnnouncementDTO): List<OrderDTO>
  - valueAlreadyExists(int, AnnouncementDTO): boolean
  - clientAlreadyExists(ClientDTO, AnnouncementDTO): boolean
   orders: List<OrderDTO>
}
class Order {
  + order(Announcement, int, Client):
  + toString(): String
  + validateOrder(order): void
   value: int
   client: Client
   statusOfOrder: StatusOfOrder
   announcement: Announcement
}
class OrderDTO {
  + OrderDTO(AnnouncementDTO, int, ClientDTO, StatusOfOrder):
   value: int
   statusOfOrder: StatusOfOrder
   announcement: AnnouncementDTO
   client: ClientDTO
}
class OrderMapper {
  + OrderMapper():
  + toEntity(OrderDTO): order
  + toDTO(order): OrderDTO
}
enum StatusOfOrder << enumeration >> {
  + StatusOfOrder():
  + values(): StatusOfOrder[]
  + valueOf(String): StatusOfOrder
}





class Client extends User {
  + Client(String, String, int, String, String, String, String, Roles):
  - validateTaxNumber(int): void
  - validateClient(String, String, int, String, String, String, String, Roles): void
  + addProperty(Property): void
   properties: List<Property>
}

User "1"--"1.*" Roles : has >
CreateOrderController .> Repositories : repositories
CreateOrderUI .> CreateOrderController

Repositories "1" --> "*" OrderRepository : has >
OrderRepository "1" --> "*" OrderMapper : Uses >
OrderMapper "1" --> "*" OrderDTO : creates >
OrderRepository "1" --> "*" Order : has >
Order "1" --> "*" Client : has a client >
OrderDTO "*" -> "1" StatusOfOrder : has a state >
Order "*"->"1" StatusOfOrder : has a state >

@enduml